--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "jotai": "^2.10.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
